Version 4.2.1, released October 27, 2019

Bug fixes.
No user-visible behavior changes.


Version 4.2.0, released August 22, 2019

Randoop supports Java 11 (and still supports Java 8).

Randoop reports methods under test that may be nondeterministic or
dependent on side-effected global state.  New command-line option
--nondeterministic-methods-to-output controls how many suspicious
methods Randoop reports.

Randoop builds in a set of omitted methods that are nondeterministic or
long-running.

Randoop produces more assertions, by calling observer methods.  This only
works if you supply the --side-effect-free-methods command-line argument.

New command-line arguments:
 * --testjar, --omit-classes, and --omit-classes-file
   make it easy to test all classes in a .jar file.
 * --jvm-max-memory indicates how much memory to use when starting a new JVM.

Command-line argument changes:
 * the --omit-methods-file argument can be repeated
 * default for --flaky-test-behavior argument changed from HALT to OUTPUT
 * renamed --print-erroneous-file to --print-non-compiling-file


Version 4.1.2, released April 21, 2019

Bug fixes, improve documentation and diagnostics.
No user-visible behavior changes.


Version 4.1.1, released February 3, 2019

Minor bug fixes; no user-visible behavior changes.


Version 4.1.0, released September 5, 2018

Randoop requires Java 8; it no longer runs on a Java 7 JVM.

New technique, "Bloodhound", for randomly selecting methods to call in a
test case.  It weights each method under test based on the method's branch
coverage and the number of times the method is chosen for a new sequence.
Enable it via --method-selection=BLOODHOUND .

Command-line argument changes:
 * renamed --small-tests to --input-selection=small-tests


Version 4.0.4, released May 23, 2018

Command-line argument changes:
 * the --specifications command-line argument can now be a .zip file
 * renamed --print-file-system-state to --print-erroneous-file
