@@ -71,7 +71,7 @@ public class SpecialCoveredClassTest {
         OperationModel.createModel(
             visibility,
             reflectionPredicate,
-            GenInputsAbstract.omitmethods,
+            GenInputsAbstract.omit_methods,
             classnames,
             coveredClassnames,
             classNameErrorHandler,
