@@ -309,7 +309,10 @@ A research question is whether this degrades the fault-finding ability of
 the test suite.  Setting global fields may change the behavior of
 subsequent tests &mdash; is that a positive or a negative?
 It would also be interesting to exclude the fields from being modified by
-Randoop, via the <code>--omitmethods</code> and <code>--omit-filed-list</code>
+Randoop, via the
+<a href="https://randoop.github.io/randoop/manual/index.html#option:omit-methods"><code>--omit-methods</code></a>
+and
+<a href="https://randoop.github.io/randoop/manual/index.html#option:omit-field"><code>--omit-field</code></a>
 command-line options.  How much does that degrade Randoop's fault-finding
 ability?
 </p>
